--- a/layout/index.html
+++ b/layout/index.html
@@ -23,14 +23,14 @@
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
     <meta property="og:title" content="웹스토리보이" />
-    <meta property="og:url" content="https://webstoryboy.co.kr/" />
+    <meta property="og:url" content="https://jihyeh53.github.io/dothome21/" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
-    <meta property="og:site_name" content="웹스토리보이" />
+    <meta property="og:site_name" content="지혜" />
     <meta property="og:description" content="웹과 관련된 정보를 제공합니다." />
     <!-- twitter meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@webstoryboy" />
-    <meta name="twitter:title" content="웹스토리보이" />
+    <meta name="twitter:title" content="지혜" />
     <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
     <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
     <!-- 웹 폰트 -->
@@ -61,9 +61,9 @@
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://websinssa.tistory.com/">Tistory</a></li>
+                    <li><a href="https://wisdominyellow.tistory.com/">Tistory</a></li>
                     <li><a href="https://codepen.io/webstoryboy">Codepen</a></li>
-                    <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
+                    <li><a href="https://jihyeh53.github.io/dothome21/">Github</a></li>
                     <li><a href="https://www.figma.com/@874463">Figma</a></li>
                 </ul>
             </nav>
@@ -72,7 +72,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://webstoryboy.co.kr" target="_blank">webstoryboy.co.kr</a></p>
+            <p><a href="https://jihyeh53.github.io/dothome21/" target="_blank">webstoryboy.co.kr</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
@@ -92,9 +92,9 @@
                 </div>
                 <!-- //Intro1 -->
 
-                <!-- Intro1 -->
+                <!-- Intro2 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">레이아웃 기본1</h2>
+                    <h2 id="intro2" class="page-header">레이아웃 기본2</h2>
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
@@ -104,10 +104,51 @@
                     </div>
                     <p>코드 보기 <a href="layout02.html">View</a></p>
                 </div>
-                <!-- //Intro1 -->
-            </div>
-            <!-- //col-md-9 -->
+                <!-- //Intro2 -->
 
+                <!-- Intro3 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro3" class="page-header">레이아웃 기본3</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout03.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout03.html">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
+                <!-- Intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">레이아웃 기본4</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout04.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout04.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
+                <!-- Intro5 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro5" class="page-header">레이아웃 기본5</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout05.png" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout05.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
+            </div>
 
             <!-- //col-md-3 -->
             <div class="col-md-3">
@@ -115,6 +156,9 @@
                     <ul class="nav bs-sidenav">
                         <li><a href="#intro1">레이아웃1</a></li>
                         <li><a href="#intro2">레이아웃2</a></li>
+                        <li><a href="#intro3">레이아웃3</a></li>
+                        <li><a href="#intro4">레이아웃4</a></li>
+                        <li><a href="#intro5">레이아웃5</a></li>
                     </ul>
                 </div>
             </div>
@@ -138,7 +182,7 @@
                 <ul class="footer-links muted">
                     <li>Currently v2.0</li>
                     <li>&middot;</li>
-                    <li><a href="https://webstoryboy.github.io/w9/html/">webstoryboy</a></li>
+                    <li><a href="https://jihyeh53.github.io/dothome21/">JIHYE</a></li>
                     <li>&middot;</li>
                     <li><a href="http://cafe.naver.com/crossbrowsing" target="_blank">publisher cafe</a></li>
                     <li>&middot;</li>
