--- a/layout/index.html
+++ b/layout/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" href="../assets/ico/favicon_114.png" sizes="128x128">
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="웹스토리보이" />
+    <meta property="og:title" content="지혜" />
     <meta property="og:url" content="https://jihyeh53.github.io/dothome21/" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
     <meta property="og:site_name" content="지혜" />
@@ -57,7 +57,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="../index.html" class="navbar-brand">WEB'S &lt;/doc&gt;</a>
+                <a href="../index.html" class="navbar-brand">JIHYE &lt;/doc&gt;</a>
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
@@ -72,7 +72,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="https://jihyeh53.github.io/dothome21/" target="_blank">webstoryboy.co.kr</a></p>
+            <p><a href="https://jihyeh53.github.io/dothome21/" target="_blank">jihyeh53.github.io</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
