--- a/layout/layout07.html
+++ b/layout/layout07.html
@@ -66,20 +66,20 @@
         width: 1200px;
         height: 200px;
         line-height: 200px;
-        background-color: #795548;
+        background-color: #664234;
     }
     #box1{
         width: 600px;
         height: 300px;
         line-height: 300px;
-        background-color: #795548;
+        background-color: #94614f;
         float: left;
     }
     #box2{
         width: 600px;
         height: 300px;
         line-height: 300px;
-        background-color: #ff9e80;
+        background-color: #fd8f6d;
         float: left;
     }
 </style>
@@ -96,7 +96,7 @@
                 banner
             </div>
         </div>
-<!--//banner-->
+        <!--//banner-->
         <div id="content">
             <div id="content1">
                 <div class="contanier">
@@ -106,7 +106,7 @@
                     content1
                 </div>
             </div>
-        <div id="content2">
+            <div id="content2">
                     <div class="contanier">
                         <div id="box1">
                             box1
@@ -118,20 +118,20 @@
                     </div>
                 </div>
             </div>
-        <div id="content3">
+            <div id="content3">
                 <div class="contanier">
                     content3
                 </div>
             </div>
-<!--//content-->
-            <div id="footer">
-                <div class="contanier">
-                    footer
-                </div>
+            <!--//content-->
+        <div id="footer">
+            <div class="contanier">
+                footer
             </div>
-    <!--//footer-->
         </div>
+        <!--//footer-->
     </div>
+</div>
 <!--//wrap-->
 
 </body>
