--- a/layout/layout08.html
+++ b/layout/layout08.html
@@ -23,6 +23,7 @@
             background-color: #f48fb1 ;
         }
         main{
+            overflow: hidden;
         }
         aside{
             width: 30%;
@@ -42,25 +43,31 @@
             background-color: #e91e63 ;
             clear:both;
         }
-        @media(max-width: 1200px){
+        @media(max-width: 600px){
             aside{
-                width: 90%;
+                float:none;
+                width: 100%;
                 height: 300px;
                 background-color: #880e4f  ;
             }
-        }
-        @media(max-width: 900px){
             section{
+                float:none;
                 width: 100%;
                 height: 300px;
                 background-color: #ff80ab  ;
             }
         }
-        @media(max-width: 500px){
+        @media(max-width: 1200px){
             warp{
                 width: 100%;
                 background-color: #f48fb1 ;
             }
+        }
+        @media(max-width: 800px){
+        warp{
+            width: 100%;
+            background-color: #d67092 ;
+        }
     }
     </style>
 </head>
@@ -74,6 +81,4 @@
         <footer></footer>
     </div>
 </body>
-
 </html>
-        
