--- a/layout/layout08.html
+++ b/layout/layout08.html
@@ -11,64 +11,62 @@
             padding: 0;
         }
         body{
-            background-color: #F3E5F5;
+            background-color: #ede7f6 ;
         }
-        wrap{
-            width: 100%;
+        #wrap{
+            width: 1200px;
             margin: 0 auto;
         }
         header{
             width: 100%;
             height: 100px;
-            background-color: #f48fb1 ;
+            background-color: #d1c4e9 ;
         }
         main{
+            width: 100%;
             overflow: hidden;
         }
         aside{
             width: 30%;
             height: 600px;
-            background-color: #f06292 ;
+            background-color: #b39ddb  ;
             float: left;
         }
         section{
             width:70%;
             height:600px;
-            background-color:#ec407a ;
+            background-color:#9575cd  ;
             float: left;
         }
         footer{
             width: 100%;
             height: 150px;
-            background-color: #e91e63 ;
+            background-color: #7e57c2 ;
             clear:both;
         }
-        @media(max-width: 600px){
-            aside{
-                float:none;
-                width: 100%;
-                height: 300px;
-                background-color: #880e4f  ;
-            }
-            section{
-                float:none;
-                width: 100%;
-                height: 300px;
-                background-color: #ff80ab  ;
+       
+        @media (max-width: 1220px){
+            #wrap {
+            width: 90%;
             }
         }
-        @media(max-width: 1200px){
-            warp{
-                width: 100%;
-                background-color: #f48fb1 ;
-            }
-        }
-        @media(max-width: 800px){
-        warp{
+        @media (max-width: 1000px){
+            #wrap {
             width: 100%;
-            background-color: #d67092 ;
+            }
         }
-    }
+        @media (max-width: 800px){
+            aside {
+            float: none;
+            width: 100%;
+            height: 300px;
+            }
+            section {
+            float: none;
+            width: 100%;
+            height: 300px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -81,5 +79,4 @@
         <footer></footer>
     </div>
 </body>
-
 </html>
