--- a/layout/index.html
+++ b/layout/index.html
@@ -218,6 +218,34 @@
             </div>
             <!-- //Intro10 -->
 
+              <!-- Intro11 -->
+              <div class="bs-docs-section">
+                <h2 id="intro11" class="page-header">레이아웃 기본11</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout11.jpeg" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout11.html">View</a></p>
+            </div>
+            <!-- //Intro11 -->
+
+              <!-- Intro12 -->
+              <div class="bs-docs-section">
+                <h2 id="intro12" class="page-header">레이아웃 기본12</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout12.jpeg" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout12.html">View</a></p>
+            </div>
+            <!-- //Intro12 -->
+
 
             </div>
 
