--- a/layout/index.html
+++ b/layout/index.html
@@ -218,6 +218,75 @@
             </div>
             <!-- //Intro10 -->
 
+              <!-- Intro11 -->
+              <div class="bs-docs-section">
+                <h2 id="intro11" class="page-header">레이아웃 기본11</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout11.jpeg" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout11.html">View</a></p>
+            </div>
+            <!-- //Intro11 -->
+
+              <!-- Intro12 -->
+              <div class="bs-docs-section">
+                <h2 id="intro12" class="page-header">레이아웃 기본12</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout12.jpeg" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout12.html">View</a></p>
+            </div>
+            <!-- //Intro12 -->
+
+             <!-- Intro13 -->
+             <div class="bs-docs-section">
+                <h2 id="intro13" class="page-header">레이아웃 기본13</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout13.png" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout13.html">View</a></p>
+            </div>
+            <!-- //Intro13 -->
+
+             <!-- Intro14 -->
+             <div class="bs-docs-section">
+                <h2 id="intro14" class="page-header">레이아웃 기본14</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout14.png" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout14.html">View</a></p>
+            </div>
+            <!-- //Intro14 -->
+
+             <!-- Intro15 -->
+             <div class="bs-docs-section">
+                <h2 id="intro15" class="page-header">레이아웃 기본15</h2>
+                <div class="row">
+                    <div class="col-md-15">
+                        <a href="#" class="thumbnail">
+                            <img src="img/layout15.png" alt="레이아웃">
+                        </a>
+                    </div>
+                </div>
+                <p>코드 보기 <a href="layout15.html">View</a></p>
+            </div>
+            <!-- //Intro15 -->
 
             </div>
 
@@ -235,6 +304,11 @@
                         <li><a href="#intro8">레이아웃8</a></li>
                         <li><a href="#intro9">레이아웃9</a></li>
                         <li><a href="#intro10">레이아웃10</a></li>
+                        <li><a href="#intro11">레이아웃11</a></li>
+                        <li><a href="#intro12">레이아웃12</a></li>
+                        <li><a href="#intro13">레이아웃13</a></li>
+                        <li><a href="#intro14">레이아웃14</a></li>
+                        <li><a href="#intro15">레이아웃15</a></li>
                     </ul>
                 </div>
             </div>
