--- a/layout/index.html
+++ b/layout/index.html
@@ -224,7 +224,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <a href="#" class="thumbnail">
-                            <img src="img/layout11.jpeg" alt="레이아웃">
+                            <img src="img/layout11.jpg" alt="레이아웃">
                         </a>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <a href="#" class="thumbnail">
-                            <img src="img/layout12.jpeg" alt="레이아웃">
+                            <img src="img/layout12.jpg" alt="레이아웃">
                         </a>
                     </div>
                 </div>
