--- a/site/css/common.css
+++ b/site/css/common.css
@@ -4,6 +4,22 @@
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-    background-color: rgba(0,0,0,0.13);
+    position: relative;
+    /* background-color: rgba(0,0,0,0.13); */
+}
+.container-fluid{
+    width: 98%;
+    margin: 0 auto;
 }
 
+/* btn-style */
+.btn-style{
+    border: 1px solid#000;
+    padding: 7px 30px;
+}
+.btn-style.radius{
+    border-radius: 30px;
+}
+.dark.btn-style{
+    border-color: #fff;
+}
