--- a/site/css/style.css
+++ b/site/css/style.css
@@ -8,23 +8,79 @@
 */
 #header{
     width: 100%;
-    height: 100px;
+    height: 70px;
+    line-height: 70px;
     border-bottom: 1px solid#eee;
 }
-.header{
- overflow: hidden;
+/* header-one */
+.header-one{
+    text-align: center; 
 }
-.header h1{
-    padding: 30px 0;
+.header-one a{
+    text-align: center; 
+}
+/* header-two*/
+.header-two{
+    overflow: hidden;
+}
+.header-two h1{
+    font-family: var(--fontNexon1B);
     float: left;
 }
-.header .menu{
+.header-two .menu{
     float: right;
+    font-family: var(--fontNexon1M);
 }
-.header .menu li{
-  display: inline;
+.header-two .menu li{
+    display: inline;
 }
-.header.menu li a{
-    padding: 40px 16px;
+.heade-twor.menu li a{
+    padding: 0px 16px;
     display: inline-block;
+}
+.header-two.menu li:last-child{
+    padding-right: 0;
+}
+/* header-three */
+.header-three{
+    text-align: center;
+    font-family: var(--fontNexon1M);
+}
+.header-three h1{
+    font-family: var(--fontNexon1B);
+    position: absolute;
+    left: 2%;
+    top: 0;
+    
+}
+.header-three .li{
+    text-align:center;
+}
+.header-three .menu li a{
+    padding: 0 16px;
+}
+.header-three .member{
+    position: absolute;
+    right: 2%;
+    top: 0;
+}
+.header-three .member a{
+    margin-left: 10px;
+    border: 1px solid #fff;
+    border-color: #fff;
+    border-radius: 30%;
+} 
+
+/* header dark-mode */
+.dark #header{
+    background-color: #2e2e2e;
+}
+.dark #header h1 a{
+    color:#fff;
+}
+.dark .menu li a{
+    color: #fff;
+}
+.dark .member a{
+    color: #fff;
 }
