--- a/site/css/reset.css
+++ b/site/css/reset.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
-
 /* 여백 초기화 */
-
 body,
 div,
 dl,
@@ -33,30 +31,36 @@ button {
     padding: 0
 }
 
-/* 폰트 초기화 */
+/* 폰트 초기화*/
 body,
 button,
 input,
 select,
 table,
 textarea {
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.5;
     color: #222;
     font-family: var(--fontNexon1M), AppleSDGothicNeo-Regular, 'Malgun Gothic', '맑은 고딕', dotum, '돋움', sans-serif;
 }
 
-/* a 링크 초기화 */
-
+/* a링크 초기화 */
 a {
-    color: #222;
-    text-decoration: none
+    color: inherit;
+    text-decoration: none;
 }
-
-/* 목록 초기화 */
-
-ol,
+/* 목록 초기화 ol이거나 ul일때*/
+ol, 
 ul {
-    list-style: none;
+    list-style: none
 }
-
+/* 스타일 초기화*/
+strong {
+    font-weight: normal;
+}
+em {
+    font-style: normal;
+}
+img{
+    width: 100%;
+}
