--- a/site/css/common.css
+++ b/site/css/common.css
@@ -1,25 +1,29 @@
 /* container */
-
-.container{
+.container {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
     position: relative;
-    /* background-color: rgba(0,0,0,0.13); */
+    /* background-color: rgba(0,0,0,0.14);  */
 }
-.container-fluid{
-    width: 98%;
+.container h2 {
+    text-align: center;
+}
+.container p {
+    text-align: center;
+}
+.container-fluid {
+    width: 96%;
     margin: 0 auto;
 }
-
 /* btn-style */
-.btn-style{
-    border: 1px solid#000;
+.btn-style {
+    border: 1px solid #000;
     padding: 7px 30px;
 }
-.btn-style.radius{
+.btn-style.radius {
     border-radius: 30px;
 }
-.dark.btn-style{
+.dark .btn-style.radius {
     border-color: #fff;
 }
