--- a/site/css/fonts.css
+++ b/site/css/fonts.css
@@ -2,76 +2,77 @@
 
 @font-face {
     font-family: 'S-CoreDream-3Light';
+    font-weight: 300;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-6Bold';
+    font-weight: 600;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-6Bold.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-7ExtraBold';
+    font-weight: 700;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-7ExtraBold.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-9Black';
+    font-weight: 900;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-9Black.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-2ExtraLight';
+    font-weight: 200;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-2ExtraLight.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-8Heavy';
+    font-weight: 800;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-5Medium';
+    font-weight: 500;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-5Medium.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-4Regular';
+    font-weight: 400;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-4Regular.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'S-CoreDream-1Thin';
+    font-weight: 100;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-1Thin.woff') format('woff');
-    font-weight: normal;
+
     font-style: normal;
 }
 /* 지마켓 */
 
 @font-face {
     font-family: 'GmarketSansMedium';
+    font-weight: 500;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'GmarketSansBold';
+    font-weight: 700;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'GmarketSansLight';
+    font-weight: 300;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 
@@ -79,37 +80,37 @@
 
 @font-face {
     font-family: 'NEXON Lv1 Gothic OTF';
+    font-weight: 500;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'NEXON Lv1 Gothic OTF Bold';
+    font-weight: 700;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Bold.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'NEXON Lv1 Gothic OTF Light';
+    font-weight: 300;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF Light.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'NEXON Lv2 Gothic Bold';
+    font-weight: 700;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic Bold.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'NEXON Lv2 Gothic Light';
+    font-weight: 300;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic Light.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'NEXON Lv2 Gothic';
+    font-weight: 500;
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff') format('woff');
-    font-weight: normal;
     font-style: normal;
 }
