--- a/site/css/imageType.css
+++ b/site/css/imageType.css
@@ -42,14 +42,14 @@
 .imageType01 .img-card .img-box{
     padding: 100px;
 }
-.imageType01 .img-card .img-word1{
-    width: 448px;
-    height: 135px;
-    left: 30px;
-    right: 30px;
-    bottom: 80px;
-    background-color: rgba(0, 0, 0, 0.7);
+.imageType01 .img-card .img-word{
     position: absolute;
+    width: 448px;
+    height: 120px;
+    bottom: 50px;
+    margin: 30px;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
 }
 .imageType01 .img-card .img-word2{
@@ -80,6 +80,9 @@
     gap: 20px;
     margin-top: 20px;
 }
+.imageType02 .img-wrap img{
+    width:400px;
+}
 .imageType02 .img-wrap .img-card{
     position: relative;
     margin-bottom: 100px;
@@ -90,9 +93,11 @@
     white-space: nowrap;
     display: block;
     margin-bottom: 5px;
+    background-color: rgb(0,0,0,0.5);
+    width: 400px
+
 }
 .imageType02 .img-card .img-word{
-    background-color: rgb(0,0,0,0.5);
     color:#fff;
     position: absolute;
     top: 50%;
