--- a/site/css/imageType.css
+++ b/site/css/imageType.css
@@ -64,6 +64,7 @@
     position: absolute;
     color: #fff;
 }
+
 /* imageType02 */
 .imageType02{
     padding: 60px 0;
@@ -73,6 +74,7 @@
     text-align: left;
     font-size: 45px;
     margin-bottom: 7px;
+    white-space: nowrap;
 }
 .imageType02 .img-wrap{
     display: flex;
