--- a/site/css/imageType.css
+++ b/site/css/imageType.css
@@ -1,3 +1,4 @@
+
 /* imageType01 */
 .imageType01{
     padding: 60px 0;
@@ -71,6 +72,7 @@
     font-family: 'Cafe24Dangdanghae';
 }
 .imageType02 h2{
+    font-family: 'Cafe24Dangdanghae';
     text-align: left;
     font-size: 45px;
     margin-bottom: 7px;
@@ -90,6 +92,7 @@
     margin-bottom: 100px;
 }
 .imageType02 .img-card .img-title{
+    font-family: 'Cafe24Dangdanghae';
     font-size: 30px;
     color: #fff;
     white-space: nowrap;
@@ -100,6 +103,7 @@
 
 }
 .imageType02 .img-card .img-word{
+    font-family: 'Cafe24Danjunghae';
     color:#fff;
     position: absolute;
     top: 50%;
@@ -108,4 +112,67 @@
     display: flex;
     -ms-flex-item-align: center;
     text-align: center; 
+}
+
+/* imgType03 */
+.imgType03 {
+    font-size: 14px;
+    padding: 100px 0;
+}
+
+.imgType03 h2 {
+    font-size: 50px;
+    margin-bottom: 45px;
+    font-family: 'Cafe24Dangdanghae';
+    text-align: left;
+}
+
+.imgType03 .wrap {
+    display: grid;
+    grid-template-columns: repeat(4,285px);
+    grid-template-rows: 285px;
+    gap: 20px;
+}
+
+.imgType03 .wrap .img:first-child{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+.imgType03 .wrap .img{
+    position: relative;
+}
+.imgType03 .wrap .img .contents {
+    width: 400px;
+    height: 30px;
+    position: absolute;
+    bottom: 35px; left: 20px;
+    background-color: rgba(0,0,0,0.7);
+    margin: 0 114px 0 10px;
+    padding: 15px 19px 45px;
+    color: #fff;
+
+}
+.imgType03 .wrap .img .box {
+    height: 22px;
+    position: absolute;
+    bottom: 35px; left: 20px;
+    background-color: rgba(0,0,0,0.7);
+    color: #FFF;
+    padding: 0px 8px 0px 9px;
+    font-family: 'Cafe24Dangdanghae';
+}
+.imgType03 .wrap .img .contents .title {
+    font-size: 30px;
+    line-height: 1;
+    font-family: 'Cafe24Dangdanghae';
+    white-space: nowrap;
+    padding: 0 30px 0 0;
+}
+.imgType03 .wrap .img .contents .desc {
+    line-height: 1.4;
+    margin-top: 10px;
+    font-family: 'Cafe24Danjunghae';
+    padding: 0 15px 0 0;
 }
